# oauth_pda_utc

./: .gitignore  MANIFEST.in  Pipfile  README.md  manage.py  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
oauth_pda_app/: __init__.py  admin.py  apps.py  backend.py  decorators.py  serializers.py  urls.py  utils.py  views.py
oauth_pda_app/migrations/: 0001_initial.py
oauth_pda_app/models/: User.py  __init__.py
oauth_pda_app/utils/: __init__.py  call_api.py
oauthpda/: asgi.py  decorators.py  settings.py  urls.py  wsgi.py
