[metadata]
name = oauth_pda_app
version = 0.1
description = Application Django pour la connexion OAuth avec le portail des assos
url = https://assos.utc.fr
author = SiMDE
author_email = simde@assos.utc.fr
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.8
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django == 3.2
    oauthlib
    requests
    drf-spectacular
